# Eternal-Clown

./: .gitignore  CMakeLists.txt  README.md
EternalClown/: FFmpegVideoSource.cpp  FFmpegVideoSource.h  IVideoSource.h  VideoTexture.cpp  VideoTexture.h  main.cpp
cmake/Modules/: FindFFMPEG.cmake
ffmpeg_opengl/: FFmpegVideoSource.cpp  FFmpegVideoSource.h  VideoSprite.cpp  VideoSprite.h  VideoTexture.cpp  VideoTexture.h  cap.cpp  cap_ffmpeg_api.hpp  cap_ffmpeg_impl.cpp  highgui.hpp  main.cpp
